Add orders and fix errors
