# app/models/api/v1/order.rb
@@ -8,15 +8,20 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
-class Order < ApplicationRecord
-    belongs_to :store
-    has_many :order_products, class_name: 'Api::V1::OrderProduct'
-    has_many :products, through: :order_products
 
-    after_save :calculate_total
+module Api
+    module V1
+        class Order < ApplicationRecord
+            belongs_to :store
+            has_many :order_products, class_name: 'Api::V1::OrderProduct'
+            has_many :products, through: :order_products
 
-    def calculate_total
-        total = products.sum(:price)
-        update_column(:total, total)
+            after_save :calculate_total
+
+            def calculate_total
+                total = products.sum(:price)
+                update_column(:total, total)
+            end
+        end
     end
 end
